[package]
name = "tree-sitter-scss"
description = "scss grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "scss"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/serenadeai/tree-sitter-scss"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.6"

[build-dependencies]
cc = "1.0"
